Refactor createIMessage method to use Map.of() for empty map creation